# Anaquel

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: frontmatter-schema.md  library-format.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: export.rs  lib.rs  library.rs  main.rs  metadata.rs  updater.rs  vault.rs
src/components/: LibraryScreen.tsx
src/components/layout/: Sidebar.css  Sidebar.tsx  TitleBar.css  TitleBar.tsx  Topbar.css  Topbar.tsx  UpdateBadge.css  UpdateBadge.tsx
src/components/ui/: ConfirmDeleteButton.css  ConfirmDeleteButton.tsx  Dialog.css  StarRatingDisplay.css  StarRatingDisplay.tsx  Toast.css  Toast.tsx
src/components/ui/fields/: AutocompleteTextField.tsx  DateField.css  DateField.tsx  DropdownSelect.css  DropdownSelect.tsx  Fields.css  SagaAutocompleteField.tsx  SelectField.tsx  StarRatingField.tsx  TagsField.tsx  TextField.tsx  TextareaField.tsx  ToggleField.tsx  useDraftValue.ts
src/data/: mockLibrary.ts
src/lib/: coverArt.ts  coverColor.ts  duplicates.ts  export.ts  grouping.ts  library.ts  metadata.ts  platform.ts  progress.ts  sort.ts  updateCheck.ts  useCoverAccent.ts  useCoverImage.ts  useDismiss.ts  useIsbnLookup.ts  vault.ts  window.ts
src/state/: filters.ts
src/styles/: theme.css
src/types/: book.ts  metadata.ts  update.ts  vault.ts
